--- a/frontend/around-web/package.json
+++ b/frontend/around-web/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.9.4",
     "axios": "^0.21.0",
+    "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-grid-gallery": "^0.5.5",
